Update ANN1 - FFNN Evaluation.ipynb

--- a/Pit Stop NN/ANN1 - FFNN Evaluation.ipynb
+++ b/Pit Stop NN/ANN1 - FFNN Evaluation.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\charm\\Desktop\\Thesis\\Code\\f1dataset1.csv', encoding='utf-8')\n",
+    "df = pd.read_csv(r'f1dataset1.csv', encoding='utf-8')\n",
     "\n",
     "# HANDLING NANs\n",
     "df['laptime'] = np.where(df['laptime'].isna(), 0.0, df['laptime'])\n",
