--- a/Pit Stop NN/ANN1 - FFNN Evaluation.ipynb
+++ b/Pit Stop NN/ANN1 - FFNN Evaluation.ipynb
@@ -69,7 +69,7 @@
    "execution_count": null,
    "id": "99da653a",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -106,13 +106,13 @@
     "# Define the FFNN model\n",
     "ffnn_model = tf.keras.models.Sequential()\n",
     "ffnn_model.add(tf.keras.layers.Dense(64, activation='relu', input_shape=(17,),\n",
-    "                                    kernel_regularizer=tf.keras.regularizers.l1_l2(l1=0.08, l2=0.0005)))\n",
+    "                                    kernel_regularizer=tf.keras.regularizers.l1_l2(l1=0.9, l2=0.001)))\n",
     "ffnn_model.add(tf.keras.layers.Dropout(0.2))  # Dropout layer for regularization\n",
     "ffnn_model.add(tf.keras.layers.Dense(64, activation='relu',\n",
-    "                                    kernel_regularizer=tf.keras.regularizers.l1_l2(l1=0.08, l2=0.0005)))\n",
+    "                                    kernel_regularizer=tf.keras.regularizers.l1_l2(l1=0.9, l2=0.001)))\n",
     "ffnn_model.add(tf.keras.layers.Dropout(0.2))  # Dropout layer for regularization\n",
     "ffnn_model.add(tf.keras.layers.Dense(64, activation='relu',\n",
-    "                                    kernel_regularizer=tf.keras.regularizers.l1_l2(l1=0.08, l2=0.0005)))\n",
+    "                                    kernel_regularizer=tf.keras.regularizers.l1_l2(l1=0.9, l2=0.001)))\n",
     "ffnn_model.add(tf.keras.layers.Dense(1, activation='sigmoid'))  # Output layer\n",
     "\n",
     "# Compile the model\n",
@@ -170,13 +170,13 @@
     "    y_train_encoded_undersampled = y_train_encoded[undersampled_indices]\n",
     "\n",
     "    # Define the class weights\n",
-    "    #class_weights = {0: 1, 1: 5}\n",
+    "    class_weights = {0: 1, 1: 2}\n",
     "\n",
     "    # Fit the model \n",
     "    history = ffnn_model.fit(X_train_processed_undersampled, y_train_encoded_undersampled,\n",
     "                             validation_data=(X_val_processed, y_val_encoded),\n",
-    "                             batch_size=64, epochs=10, callbacks=[early_stopping],\n",
-    "                             #class_weight=class_weights, \n",
+    "                             batch_size=32, epochs=10, callbacks=[early_stopping],\n",
+    "                             class_weight=class_weights, \n",
     "                             verbose=1)\n",
     "\n",
     "#     # Evaluate on the validation set\n",
@@ -231,7 +231,7 @@
     "    plt.plot(recall_per_fold[i], precision_per_fold[i], lw=2, label=f'Fold {i+1}')\n",
     "plt.xlabel('Recall')\n",
     "plt.ylabel('Precision')\n",
-    "plt.title('Precision-Recall Curve')\n",
+    "plt.title('Precision-Recall Curve of the FFNN - Pit Stop Decision')\n",
     "plt.legend(title='Folds', loc='lower left')\n",
     "plt.grid(True)\n",
     "plt.show()\n",
@@ -251,6 +251,14 @@
     "plt.legend(title='Folds', loc='lower right')\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13667c5c",
+   "metadata": {},
+   "source": [
+    "## Tuning"
    ]
   },
   {
