--- a/Tyre Compound NN/ANN2 - Evaluation pipeline on the NN.ipynb
+++ b/Tyre Compound NN/ANN2 - Evaluation pipeline on the NN.ipynb
@@ -86,7 +86,7 @@
     "model.add(layers.Dense(3, activation='softmax'))\n",
     "\n",
     "# Compile the model\n",
-    "model.compile(optimizer=keras.optimizers.RMSprop(learning_rate=0.0009218034891406539),\n",
+    "model.compile(optimizer=keras.optimizers.RMSprop(),\n",
     "              loss='sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'])\n",
     "\n",
