--- a/Pit Stop NN/ANN1 - Testing.ipynb
+++ b/Pit Stop NN/ANN1 - Testing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20ebb823",
+   "id": "a04a311d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,12 @@
     "from sklearn import tree\n",
     "from sklearn.svm import SVC\n",
     "from tensorflow import keras\n",
+    "from sklearn.metrics import f1_score\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.tree import plot_tree, export_text\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn import decomposition, datasets, linear_model\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler, OneHotEncoder\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
@@ -34,12 +35,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2e12f7d",
+   "id": "01466303",
    "metadata": {},
    "outputs": [],
    "source": [
     "#LOADING DATA...\n",
-    "df = pd.read_csv(r'f1dataset1.csv', encoding='utf-8')\n",
+    "df = pd.read_csv(r\"f1dataset1.csv\", encoding='utf-8')\n",
     "df.head()\n",
     "\n",
     "# HANDLING NANs\n",
@@ -48,15 +49,15 @@
     "df['tyreageprogress'] = np.where(df['tyreageprogress'].isna(), 0.0, df['tyreageprogress'])\n",
     "\n",
     "# 0 - 51390 1- 1444\n",
-    "count = df['pitstop'].value_counts()\n",
-    "print(count)\n",
+    "# count = df['pitstop'].value_counts()\n",
+    "# print(count)\n",
     "\n",
     "# balancing the df to teach the model \n",
     "a = df[df['pitstop'] == 0][:1444] \n",
     "df = df[df['pitstop'] != 0 ]\n",
     "df = pd.concat([df, a], axis=0)\n",
-    "count = df['pitstop'].value_counts()\n",
-    "print(count)\n",
+    "# count = df['pitstop'].value_counts()\n",
+    "# print(count)\n",
     "\n",
     "\n",
     "# shuffle data\n",
@@ -66,43 +67,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77edded3",
+   "id": "4094e5af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_encode = LabelEncoder()\n",
-    "df['is_leader'] = label_encode.fit_transform(df['is_leader']) #leader = 0, pursuer = 1\n",
-    "df['relativecompound'] = label_encode.fit_transform(df['relativecompound']) #hard = 0 , med = 1 , soft = 2\n",
-    "#df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f67112f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#SHOWING THE GENDER DISTRIBUTION VIA BAR CHART & VALUE COUNTS\n",
-    "sns.countplot(data=df,x='pitstop')\n",
-    "df['pitstop'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55d161ef",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
     "# Separate categorical and numerical features\n",
     "cat_features = ['is_leader', 'relativecompound', 'racetrackcat', 'fcystatus', 'remaining_pit_stops', 'pursuer_tyre_change', 'close_ahead']\n",
     "num_features = ['race_progress', 'tyreageprogress']\n",
@@ -139,168 +107,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5717e95b",
+   "id": "27c581a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import f1_score\n",
-    "\n",
     "# Calculate the F1 score\n",
-    "f1 = f1_score(y_test, y_pred)\n",
-    "\n",
+    "f1_svm = f1_score(y_test, y_pred)\n",
     "# Print the F1 score\n",
-    "print(\"F1 Score:\", f1)"
+    "print(\"F1 Score:\", f1_svm*100)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "02f9f8b9",
+   "id": "d1e4ddcd",
    "metadata": {},
    "source": [
-    "## dt"
+    "## DT"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f85bb65",
+   "id": "2eeadc48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "\n",
-    "# LOADING DATA...\n",
-    "df = pd.read_csv(r'f1dataset1.csv', encoding='utf-8')\n",
-    "\n",
-    "# HANDLING NANs\n",
-    "df['laptime'] = np.where(df['laptime'].isna(), 0.0, df['laptime'])\n",
-    "df['race_progress'] = np.where(df['race_progress'].isna(), 0.0, df['race_progress'])\n",
-    "df['tyreageprogress'] = np.where(df['tyreageprogress'].isna(), 0.0, df['tyreageprogress'])\n",
-    "\n",
-    "# Separate categorical and numerical features\n",
-    "cat_features = ['is_leader', 'relativecompound', 'racetrackcat', 'fcystatus', 'remaining_pit_stops', 'pursuer_tyre_change', 'close_ahead']\n",
-    "num_features = ['race_progress', 'tyreageprogress']\n",
-    "\n",
-    "# Splitting the data into input features (X) and pit stop labels (y)\n",
-    "x_cat = df[cat_features]\n",
-    "x_num = df[num_features]\n",
-    "X = pd.concat([x_cat, x_num], axis=1)\n",
-    "y = df['pitstop']\n",
-    "\n",
-    "# One-hot encoding categorical features\n",
-    "encoder = OneHotEncoder()\n",
-    "X_encoded = encoder.fit_transform(x_cat).toarray()\n",
-    "\n",
-    "# Combining encoded categorical features with numerical features\n",
-    "X = np.concatenate((X_encoded, x_num), axis=1)\n",
-    "\n",
-    "# Splitting the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
     "# Train the Decision Tree classifier\n",
     "dt_classifier = DecisionTreeClassifier()\n",
-    "dt_classifier.fit(X_train, y_train)\n",
-    "\n",
-    "# Make predictions\n",
-    "y_pred = dt_classifier.predict(X_test)"
+    "dt_classifier.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "089273a0",
+   "id": "e3fdac55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import f1_score\n",
+    "y_pred = dt_classifier.predict(X_test)\n",
     "\n",
-    "# Calculate the F1 score\n",
-    "f1 = f1_score(y_test, y_pred)\n",
-    "\n",
-    "# Print the F1 score\n",
-    "print(\"F1 Score:\", f1)"
+    "f1_dt = f1_score(y_test, y_pred)\n",
+    "print(\"F1 Score:\", f1_dt)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "af37faf1",
+   "id": "5d938eaf",
    "metadata": {},
    "source": [
-    "## logistic regression"
+    "## LR"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edd1f851",
+   "id": "36600774",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "# LOADING DATA...\n",
-    "df = pd.read_csv(r'f1dataset1.csv', encoding='utf-8')\n",
-    "\n",
-    "# HANDLING NANs\n",
-    "df['laptime'] = np.where(df['laptime'].isna(), 0.0, df['laptime'])\n",
-    "df['race_progress'] = np.where(df['race_progress'].isna(), 0.0, df['race_progress'])\n",
-    "df['tyreageprogress'] = np.where(df['tyreageprogress'].isna(), 0.0, df['tyreageprogress'])\n",
-    "\n",
-    "# Separate categorical and numerical features\n",
-    "cat_features = ['is_leader', 'relativecompound', 'racetrackcat', 'fcystatus', 'remaining_pit_stops', 'pursuer_tyre_change', 'close_ahead']\n",
-    "num_features = ['race_progress', 'tyreageprogress']\n",
-    "\n",
-    "# Splitting the data into input features (X) and pit stop labels (y)\n",
-    "x_cat = df[cat_features]\n",
-    "x_num = df[num_features]\n",
-    "X = pd.concat([x_cat, x_num], axis=1)\n",
-    "y = df['pitstop']\n",
-    "\n",
-    "# One-hot encoding categorical features\n",
-    "encoder = OneHotEncoder()\n",
-    "X_encoded = encoder.fit_transform(x_cat).toarray()\n",
-    "\n",
-    "# Combining encoded categorical features with numerical features\n",
-    "X = np.concatenate((X_encoded, x_num), axis=1)\n",
-    "\n",
-    "# Splitting the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Feature scaling\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
     "# Train the Logistic Regression model\n",
     "logreg = LogisticRegression()\n",
-    "logreg.fit(X_train_scaled, y_train)\n",
-    "\n",
-    "# Make predictions\n",
-    "y_pred = logreg.predict(X_test_scaled)\n"
+    "logreg.fit(X_train_scaled, y_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07598d60",
+   "id": "7941a194",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import f1_score\n",
+    "# Make predictions\n",
+    "y_pred = logreg.predict(X_test_scaled)\n",
     "\n",
-    "# Calculate the F1 score\n",
-    "f1 = f1_score(y_test, y_pred)\n",
-    "\n",
-    "# Print the F1 score\n",
-    "print(\"F1 Score:\", f1)"
+    "f1_lr = f1_score(y_test, y_pred)\n",
+    "print(\"F1 Score:\", f1_lr*100)"
    ]
   }
  ],
